# opensilexClientPython

./: .gitignore  Client.py  Examples.ipynb  README.md  REAMDE.md  already_existed.csv  credentials.json  failed.csv  functions.py  git_push.sh  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: Examples-checkpoint.ipynb  credentials-checkpoint.json
csv_example/: data.csv  extended_variables_testing.csv  objects.csv  variables.csv
doc/: genrate_package_from_source.md
docs/: AnnotationsApi.md  AreaApi.md  AuthenticationApi.md  BRAPIApi.md  ConcernedItemPositionGetDTO.md  DataApi.md  DataFileCreationDTO.md  DevicesApi.md  DocumentsApi.md  EventsApi.md  ExperimentCreationDTO.md  ExperimentsApi.md  FactorsApi.md  GermplasmApi.md  InfrastructureFacilityNamedDto.md  MoveDetailsDTO.md  OWLClassPropertyRestrictionDTO.md  OntologyApi.md  OrganisationsApi.md  PositionGetDto.md  PositionNoSqlGetDto.md  PositionsApi.md  ProjectsApi.md  ScientificObjectsApi.md  SecurityApi.md  SpeciesApi.md  VariablesApi.md  VueJsApi.md  VueJsOntologyExtensionApi.md
opensilexClientTools/: __init__.py  api_client.py  configuration.py
opensilex_configs/: default_config.yaml
test/: test_activity_creation_dto.py  test_activity_get_dto.py  test_agent_model.py  test_annotation_creation_dto.py  test_annotation_get_dto.py  test_annotation_update_dto.py  test_annotations_api.py  test_area_api.py  test_area_creation_dto.py  test_area_get_dto.py  test_area_update_dto.py  test_authentication_api.py  test_authentication_dto.py  test_brapi_api.py  test_call.py  test_characteristic_creation_dto.py  (+179 more)
(+50 files in other folders)
