[metadata]
name = opensilex-py-client
version = 0.0.1
author = Gabriel Besombes
author_email = gabriel.besombes@inrae.fr
description = Package used to interact with an opensilex instance\x27s API 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src